Stacks 2.3 - Jan 11, 2019
--------------------------
    Feature: populations: Backwards-compatibly worked on filtering options; added long names for -r and -p and
             added --min-samples-overall and --filter-haplotype-wise.
    Feature: populations: Implemented --treemix.
    Feature: gstacks: Improved RAD-loci reference sequences around the end of forward (restriction site-bound) reads.
    Feature: gstacks: Improved the way 2-microsatelittes are dealt with.
    Feature: gstacks: Changed the default value for --var-alpha from 0.05 to 0.01 (--gt-alpha is unchanged at 0.05).
    Feature: gstacks: Improved PCR duplicates-related log information (distribution of clone sizes).
    Feature: gstacks: Added an option to save read alignments (--write-alignments).
    Feature: Backwards-compatibly switched to hyphens in command line options (underscores remain accepted
             where they previously were).
    Feature: cstacks/sstacks now report an error when the disk becomes full.

	2.3b - Jan 23, 2019
	----------
	Bugfix: Fixed some limit cases causing an abort at gstacks.cc:1752.
	Bugfix: Fixed some limit cases causing an abort at debruijn.cc:60.
	Bugfix: Fixed some limit cases apparently causing an infinite loop in the de Bruijn code.
	Bugfix: Restored compilation with the oldest C++11 GCC versions (4.9 and 5.0).

Stacks 2.2 - Aug 22, 2018
--------------------------
    Feature: Added the --bestrad flag to process_radtags. When used it will look for reads that need transposed
             before they are processed.
    Feature: gstacks: New option --max-debrujin-reads to control the construction of the de Bruijn graph; replaces
             --min-kmer-freq which is now deprecated
    Bugfix: Fixed a breaking circumstantial segmentation fault in populations
    Bugfix: Added run number to output FASTQ headers in process_radtags to make sure read IDs are always unique.

Stacks 2.1 - June 25, 2018
--------------------------